# BE-Capstone-Project

./: README.md  pyproject.toml
api/: models.py  serializers.py  urls.py
inventory_management/: Procfile  db.sqlite3  requirements.txt  settings.py  urls.py
inventory_management/api/: views.py
inventory_management/api/migrations/: 0001_initial.py
inventory_management/inventory_management/: settings.py
